--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -638,29 +638,41 @@
     "required_role": "Vui lòng chọn vai trò!"
   },
   "harvest": {
-    "back": "Quay lại",
-    "title": "Đơn Yêu Cầu Cung Cấp Nguyên Liệu",
-    "form": {
-      "name": "Tên đơn",
-      "name_placeholder": "Tên đơn yêu cầu cung cấp...",
-      "fuel_type": "Loại Nguyên liệu cần thu",
-      "fuel_type_placeholder": "Chọn loại Nguyên liệu",
-      "no_data": "Không có dữ liệu",
-      "image": "Hình ảnh",
-      "image_placeholder": "Tải ảnh lên",
-      "quantity": "Tổng số lượng cần thu (Kg)",
-      "quantity_placeholder": "Nhập số lượng...",
-      "price": "Giá trên mỗi Kg / Đơn vị (VND)",
-      "price_placeholder": "Nhập giá...",
-      "start_date_placeholder": "Chọn ngày bắt đầu nhận đơn",
-      "end_date_placeholder": "Chọn ngày kết thúc",
-      "due_date_placeholder": "Chọn hạn chót hoàn thành",
-      "priority": "Mức độ ưu tiên",
-      "priority_placeholder": "Chọn mức độ ưu tiên",
-      "note": "Ghi chú",
-      "note_placeholder": "Nhập ghi chú...",
-      "total_price": "Tổng giá"
-    },
+  "back": "Quay lại",
+  "title": "Đơn Yêu Cầu Cung Cấp Nguyên Liệu",
+  "title_description": "Điền đầy đủ thông tin để tạo đơn yêu cầu cung cấp nguyên liệu mới",
+  "detail": "Chi tiết đơn yêu cầu",
+  "form": {
+    "name": "Tên đơn",
+    "name_placeholder": "Nhập tên đơn yêu cầu...",
+    "fuel_type": "Loại nguyên liệu",
+    "fuel_type_placeholder": "Chọn loại nguyên liệu",
+    "no_data": "Không có dữ liệu",
+    "image": "Hình ảnh nguyên liệu",
+    "image_placeholder": "Nhấn hoặc kéo tệp vào để tải lên",
+    "image_description": "Hỗ trợ PNG, JPG, JPEG dung lượng tối đa 10MB",
+    "quantity": "Tổng số lượng cần thu (Kg)",
+    "quantity_placeholder": "Nhập số lượng...",
+    "price": "Giá trên mỗi Kg / Đơn vị (VND)",
+    "price_placeholder": "Nhập giá...",
+    "start_date": "Ngày bắt đầu",
+    "start_date_placeholder": "Chọn ngày bắt đầu nhận đơn",
+    "end_date": "Ngày kết thúc",
+    "end_date_placeholder": "Chọn ngày kết thúc",
+    "due_date": "Hạn chót",
+    "due_date_placeholder": "Chọn hạn chót hoàn thành",
+    "priority": "Mức độ ưu tiên",
+    "priority_placeholder": "Chọn mức độ ưu tiên",
+    "note": "Ghi chú",
+    "note_placeholder": "Nhập ghi chú hoặc yêu cầu bổ sung...",
+    "total_price": "Tổng giá"
+  },
+  "note_require": {
+    "note": "Lưu ý:",
+    "note_parent": "Các trường có dấu",
+    "note_child": "là bắt buộc. Vui lòng đảm bảo mọi thông tin là chính xác trước khi gửi yêu cầu."
+  },
+  "viewList": "Yêu cầu cung cấp",
     "priority": {
       "high": "Cao",
       "medium": "Trung bình",
@@ -1056,23 +1068,32 @@
     "createFail": "Tạo đơn thất bại!"
   },
   "materialExport": {
-    "title": "Tạo Đơn Xuất Kho",
-    "createdBy": "Người tạo đơn:",
-    "selectBatch": "Chọn Lô nguyên liệu",
-    "selectBatchPlaceholder": "Chọn lô nguyên liệu",
-    "selectProduction": "Chọn Đơn sản xuất",
-    "selectProductionPlaceholder": "Chọn đơn sản xuất",
-    "exportName": "Tên đơn xuất kho",
-    "exportNamePlaceholder": "Nhập tên đơn xuất kho",
-    "exportType": "Loại đơn",
-    "productionType": "Đơn sản xuất",
-    "note": "Ghi chú",
-    "notePlaceholder": "Nhập ghi chú"
+  "detail": "Chi tiết yêu cầu xuất kho",
+  "title": "Tạo Yêu Cầu Xuất Kho",
+  "title_description": "Điền thông tin để tạo một yêu cầu xuất kho mới",
+  "createdBy": "Người tạo yêu cầu:",
+  "selectBatch": "Chọn lô nguyên liệu",
+  "selectBatchPlaceholder": "Chọn lô nguyên liệu",
+  "selectProduction": "Chọn đơn sản xuất",
+  "selectProductionPlaceholder": "Chọn đơn sản xuất",
+  "exportName": "Tên đơn xuất kho",
+  "exportNamePlaceholder": "Nhập tên đơn xuất kho",
+  "exportType": "Loại đơn",
+  "productionType": "Đơn sản xuất",
+  "note": "Ghi chú bổ sung",
+  "notePlaceholder": "Nhập ghi chú hoặc yêu cầu khác",
+  "create_btn": "Tạo Yêu Cầu Xuất Kho",
+  "note_require": {
+    "note": "Lưu ý:",
+    "note_parent": "Các trường có dấu",
+    "note_child": "là bắt buộc. Đơn sản xuất sẽ được chọn tự động dựa trên lô nguyên liệu đã chọn."
   },
+    "viewList": "Danh sách xuất kho"
+},
   "materialExportList": {
-    "title": "Quản lý Đơn xuất kho",
+    "title": "Danh sách yêu cầu xuất kho",
     "exportType": "Loại xuất kho",
-    "productionRequest": "Đơn sản xuất",
+    "productionRequest": "Yêu cầu sản xuất",
     "batch": "Lô nguyên liệu",
     "status": "Trạng thái",
     "detailTitle": "Chi tiết đơn xuất kho",
